Update EntityMapper.java